hyrax_tests/errors/NoSuchVariable.ascii
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.ascii?k
-s 
